--- a/templates/index.html
+++ b/templates/index.html
@@ -17,7 +17,7 @@
       <!-- Display player score -->
       <div class="scores">
           <p>Player 1 (x) Score: {{ scores['Player 1'] }}</p>
-          <p>Player 2 (0) Score: {{ scores['player 2'] }}</p>
+          <p>Player 2 (0) Score: {{ scores['Player 2'] }}</p>
       </div>
 
       <!-- Tic-Tac-Toe board -->
