--- a/static/style.css
+++ b/static/style.css
@@ -4,7 +4,7 @@ body {
   justify-content: center;
   align-items: center;
   height: 100vh;
-  background-color: #f5f5f5;
+  background-color: Gray;
 }
 
 .container {
@@ -32,7 +32,7 @@ body {
 }
 
 .cell:hover {
-  background-color: #eee;
+  background-color: Blue;
 }
 
 .reset-button {
@@ -44,7 +44,7 @@ body {
 }
 
 .reset-button:hover {
-  background-color: #0056b3;
+  background-color: Red;
 }
 
 .result {
